--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "dotenv": "^16.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.4.0",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.1",
     "sass": "^1.54.9",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-redux": "^7.1.24"
   }
 }
